[package]
name = "gpterm"
version = "0.1.0"
description = "Yet another command-line chat GPT frontend written in Rust."
authors = ["Makis Christou <makis_christou@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.28"
ctrlc = "3.1.9"
dotenv = "0.15.0"
directories = "5.0.0"
chrono = "0.4.24"
reedline = "0.18.0"
crossterm = "0.26.1"
syntect = "5.0.0"

[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["rustls-tls", "stream", "json"]
